--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
         "php": "^8.0.2",
         "barryvdh/laravel-debugbar": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/scout": "^9.6",
+        "laravel/tinker": "^2.7",
+        "meilisearch/meilisearch-php": "^0.26.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
